[package]
name = "audiocloud_lib"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.10.0"
serde = "1.0.199"
serde_derive = "1.0.199"
serde_json = "1.0.116"
walkdir = "2.5.0"
fuzzy-matcher = { git = "https://github.com/lotabout/fuzzy-matcher.git" }
